<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_customer" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/menu_customer_add" />
    </group>

    <item android:title="Opções">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
